--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,76 @@
 /* Move your styles here when you're ready to clean up your HTML file */
 /* Don't forget to link to this file in your HTML, otherwise your styles won't show up! */
+
+h1{
+background-color: lightblue;
+color: Red;
+text-align-last: center;
+}
+
+.exercises{
+  color: blue;
+
+}
+html{
+
+font-size: 15px;
+
+}
+
+code{
+
+font-style: italic;
+
+}
+
+header{
+
+
+border-bottom-width: medium ; border-bottom-style: solid; border-color: black;
+
+}
+
+.class-list{
+  list-style-type: square;
+}
+
+.item{
+
+border: medium solid black;
+
+}
+
+.even{
+
+  background-color: grey;
+}
+
+.odd{
+background-color: black;
+
+}
+
+#item1{
+
+  font-size: 30px;
+}
+
+#item2{
+  text-align: right;
+}
+
+ol > li > p { padding: 25px;
+    background-color: grey;
+
+
+}
+
+ol > li > p :nth-child(odd){
+  background-color: lightblue;
+
+}
+
+li > ul > code {
+
+  background-color: red;
+}
